New layout + sending messages + localisation